fix curriculum button on mobile screen

--- a/css/style.css
+++ b/css/style.css
@@ -915,6 +915,12 @@ footer h1 {
     width: 75%;
   }
 
+  .curriculum {
+    width: 100%;
+
+    padding-bottom: 20px;
+  }
+
   .contactForm {
     padding: 0px;
   }
